--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
          <div class="main-content">
             {{>header}}
+            <p>This site was created by Kabul. It used data from mapbox.com and weatherstack.com</p>
             <img src="/img/robot.png">
         </div> 
         {{>footer}}
